# python-docx

./: pyproject.toml
